--- a/pengge c language/pengge c language.vcxproj.filters
+++ b/pengge c language/pengge c language.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="homework.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="pointer advanced.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
