--- a/pengge c language/pengge c language.vcxproj
+++ b/pengge c language/pengge c language.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="homework.c" />
+    <ClCompile Include="pointer advanced.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
